gitops/manifests/todo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    istio-injection: enabled    # Envoy sidecar auto-injection (block 9)
