gitops/manifests/todo/30-todo-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo
  annotations:
    demo: "2"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      annotations:
        demo: "2"
      labels:
        app: todo-frontend
    spec:
      serviceAccountName: todo-frontend
      containers:
      - name: todo-frontend
        image: 172.31.9.150:30500/todo-frontend:v2
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 25m
            memory: 24Mi
          limits:
            cpu: 200m
            memory: 96Mi
